Fix search bar color in dark mode

--- a/less/search.less
+++ b/less/search.less
@@ -5,7 +5,7 @@
   bottom: 0;
   left: 0;
   z-index: 100;
-  background: #fff;
+  background: var(--main-background-color);
   -webkit-transition: all 400ms cubic-bezier(0.32, 1, 0.23, 1);
   transition: all 400ms cubic-bezier(0.32, 1, 0.23, 1);
   -webkit-transform: translate(0, 100%);
@@ -52,16 +52,19 @@
     // poorman's reset
     border: none;
     outline: none;
-    padding: 0;
+    padding: 0 0 0 5px;
     margin: 0;
     // poorman's reset end
 
     width: 100%;
-    font-size: 30px;
+    font-size: 22px;
     font-weight: bold;
     color: var(--main-text-color);
+    background-color: var(--surface0-color);
    
     @media only screen and (min-width: 768px) {
+      font-size: 30px;
+      padding-left: 10px;
       margin-left: 20px;
     }
   }
